Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,5 @@ table {
 
 td {
   padding-left: 10%;
+  padding-right: 10%;
 }
